--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: 2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -92,6 +93,9 @@ flutter:
     - family: Roboto
       fonts:
         - asset: assets/fonts/Roboto-Bold.ttf
+    - family: Roboto-Black
+      fonts:
+        - asset: assets/fonts/Roboto-Black.ttf
     - family: Jacquard
       fonts:
         - asset: assets/fonts/Jacquard12-Regular.ttf
@@ -113,3 +117,5 @@ flutter:
     
   assets: 
     - assets/images/
+    - assets/images/leon.svg
+    - assets/images/gato.svg
